# xaim

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/: renovate.json
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: check.yml  docker_image.yml
src/: bot.py  main.py  utils.py
src/cogs/: cc.py  info.py  metrics.py  poll.py
src/data/: train.txt
src/selects/: poll.py
src/views/: poll.py
