[project]
name = "xaim"
version = "0.0.1"
description = "Xodium Artificial Intelligence Model"
requires-python = ">=3.13"
dependencies = [
    "transformers",
    "torch",
    "black",
    "accelerate",
    "datasets",
]

authors = [{ name = "Xodium", email = "info@xodium.org" }]
license = "AGPL-3.0"
readme = "README.md"
