[project]
name = "xaim"
version = "0.0.1"
description = "Xodium Artificial Intelligence Model"
requires-python = ">=3.13"
dependencies = [
    "torch",
    "spacy",
    "transformers",
    "huggingface_hub[hf_xet]",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]

authors = [{ name = "Xodium", email = "info@xodium.org" }]
license = "AGPL-3.0"
readme = "README.md"

[dependency-groups]
dev = ["ty>=0.0.1a14"]
